samples/_failures_safe/1761192533_3d258b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4d2a772.c: In function ‘main’:
./samples/SAFE/__tmp_e4d2a772.c:197:5: error: expected declaration or statement at end of input
  197 |     }
      |     ^
